fix alignment issues on top_nav and on recent_game card on dashboard

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,20 +12,33 @@
  *= require foundation_and_overrides
  *= require_tree .
  */
- .top-right-links a{
- 	font-size: 0.3em;
- 	display: inline-block;
- 	font-family: "proxima-nova";
- 	font-weight: 100;
- 	color: white;
-  float: left;
-  height: 2em;
- 	margin-left: 2em;
-  padding-top: 15px;
- }
- .weird-link a {
- 	padding: 0.15em;
- }
+
+// * {
+//   border: 1px solid red;
+//   box-sizing: border-box;
+// }
+
+@media all and (min-width: 64em) {
+ .top-nav {
+  margin-left: 10px;
+ }  
+}
+
+ .top-right-links { 
+    & a {
+     	font-size: 1em;
+     	display: inline-block;
+     	font-family: "proxima-nova";
+     	font-weight: 100;
+     	color: white;
+      float: left;
+      height: 2em;
+     	margin-left: 3em;
+      padding-top: 15px;
+      font-weight: bold;
+    }
+}
+
 
  .nav-wrap{
  	background: #083930;
@@ -107,7 +120,7 @@ h3{
  /* border: 1px solid green;*/
 /*  padding-left: 0;
   padding-right: 0;*/
-}
+//}
 
 
 .card_title {
